Crash in libmjpeg-plugin.dll loading specific files
I found out that you can crash VLC by loading a diff kind of file. The crash happens in the libmjpeg_plugin.
I found out that you can crash VLC by loading a diff kind of file. The crash happens in the libmjpeg_plugin.
assigned to @Courmisch
added Component::Decoders label
changed milestone to %1.0.x maintenance
added Component::Demuxers label and removed Component::Decoders label
added 1 deleted label
added Status::fixed label
closed
commit 19d703eda4269351b21c51931384e96cc684fbc8 Author: Rémi Denis-Courmont remi@remlab.net Date: Thu Oct 29 19:57:19 2009 +0200
MJPEG: fix boundary condition, off-by-one (closes [#3128](https://code.videolan.org/videolan/vlc/-/issues/3128))
(cherry picked from commit 9e4b1526f9fda6351ac4a053a7e412a6bb54d7e8)
Original author: remi@remlab.net
VideoLAN code repository instance