MJPEG: fix boundary condition, off-by-one (closes #3128)